Fix thumbnail position on mobile
git-svn-id: https://plugins.svn.wordpress.org/easy-media-gallery@715927 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/trunk/css/frontend.css
+++ b/trunk/css/frontend.css
@@ -184,7 +184,7 @@ span.link_post:hover{
 .easymedia_right {text-align: center !important; float:none !important; margin-left: 0;}
 .easymedia_none {text-align: center !important; float:none !important;}
 
-.thecol {width:100% !important;}
+.thecol {width: auto !important;}
 
 .forspan {
    width:auto !important;
